test/theseus/asset/bad-ghost-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
   name: ghost-deployment
spec:
   replicas: 1
   template:
      metadata:
         name: ghost-container
         labels:
            app: ghost-container
      spec:
         containers:
            - image: registry.binarysludge.com/sublimino/ghost-k8s:latest
              name: ghost-container
              imagePullPolicy: IfNotPresent
              env:
                 - name: NODE_ENV
                   value: "FAKE-AND-BAD_CONFIGURATION"
                 - name: GHOST_URL
                   value: 'www.err.systems'
#                 - name: GHOST_CONTENT
#                   value: /var/lib/ghost/bad
                 - name: DB_USER
                   value: <your mysql user account>
                 - name: DB_PASSWORD
                   value: <your mysql user password>
                 - name: DB_NAME
                   value: <your database name>
              ports:
                 - containerPort: 2368
                   name: ghost-http
#               volumeMounts:
#                  - name: ghost-persistent-storage
#                    mountPath: /var/lib/ghost
#          volumes:
#             - name: ghost-persistent-storage
#               gcePersistentDisk:
#                  pdName: blog-disk-ghost
#                  fsType: ext4
