test/theseus/asset/helloworld-service-and-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  type: NodePort
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld
---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: helloworld
#   annotations:
#     kubernetes.io/ingress.class: "istio"
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /hello
#         backend:
#           serviceName: helloworld
#           servicePort: 5000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        version: v1
    spec:
      containers:
      - name: helloworld
        image: istio/examples-helloworld-v1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: Always #IfNotPresent
        ports:
        - containerPort: 5000
