test/theseus/asset/reviews-deployment-v1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reviews
        version: v1
    spec:
      containers:
      - name: reviews
        image: istio/examples-bookinfo-reviews-v1:1.5.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        livenessProbe:
          exec:
            command:
            - bash
            - -c
            - 'exec 5<>/dev/tcp/127.0.0.1/9080 && echo -e "GET /reviews/0 HTTP/1.0\n" >&5 && head -n1 <&5 | grep 200'
          initialDelaySeconds: 20
          timeoutSeconds: 3
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - bash
            - -c
            - 'exec 5<>/dev/tcp/127.0.0.1/9080 && echo -e "GET /reviews/0 HTTP/1.0\n" >&5 && head -n1 <&5 | grep 200'
          initialDelaySeconds: 20
          timeoutSeconds: 3
          periodSeconds: 10
